3rd-semester/tf-aws-lb-with-route53/lb-route53/sg.tf
# HTTP, HTTPS, SSH rule

resource "aws_security_group" "altschool-lb-sg" {
  name        = "allow web"
  description = "Allow web inbound traffic"
  vpc_id      = aws_vpc.altschool-vpc.id

  ingress {

    description = "HTTPS from internet"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "HTTP from internet"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "altschool-lb-sg"
  }
}

resource "aws_security_group" "altschool-replicas-sg" {
  name        = "allow web and ssh"
  description = "Allow web and ssh inbound traffic"
  vpc_id      = aws_vpc.altschool-vpc.id

  ingress {
    description = "HTTPS from internet"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "HTTP from internet"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "SSH from internet"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "altschool-replicas-sg"
  }
}
